added documentations for Live Test CRUD
